--- a/contacts.html
+++ b/contacts.html
@@ -6,13 +6,15 @@
     <title>Contacts</title>
     <link rel="stylesheet" href="./styles/contacts.css">
     <script src="/js/navBar.js"></script>
+    <script src="/js/contacts.js"></script>
 </head>
 <body onload="includeHTML()">
     <div w3-include-html="/templates/navBar.html"></div>
     <div w3-include-html="/templates/header.html"></div>
     <div class="contact-container">
+        <div class="d-none" id="overlay-add-contact"></div>
         <div class="left-side">
-            <div class="add-button"><button>Add new contact</button></div>
+            <div class="add-button"><button class="button1" onclick="addNewContact()">Add new contact</button></div>
             <div class="contact-area">
                 <div class="letter">
                     A
@@ -53,7 +55,7 @@
                     <div class="name-mail">
                         <h3>Anton Mayer</h3>
                         <div class="logos">
-                            <div class="edit"><img src="./img/edit.png">Edit</div>
+                            <div class="edit"><img src="./img/edit-black.png">Edit</div>
                             <div class="delete"><img src="./img/delete.png">Delete</div>
                         </div>
                     </div>
