--- a/help.html
+++ b/help.html
@@ -11,7 +11,7 @@
     <div w3-include-html="/templates/navBar.html"></div>
     <div w3-include-html="/templates/header.html"></div>
     <div class="main-help-container">
-        <img class="arrow" src="/img/arrow-left-line.png" alt="">
+        <a href="contacts.html"><img class="arrow" src="/img/arrow-left-line.png" alt=""></a>
         <h1>Help</h1> 
         <p>Welcome to the help page for <span class="blue">Join</span>, your guide to using our kanban project management tool. Here, we'll provide an overview of what <span class="blue">Join</span> is, how it can benefit you, and how to use it.</p>
         <h2>What is Join?</h2>
