--- a/legalNotice.html
+++ b/legalNotice.html
@@ -11,7 +11,7 @@
     <div w3-include-html="/templates/navBar.html"></div>
     <div w3-include-html="/templates/header.html"></div>
     <div class="legal-notice-container">
-        <img class="arrow" src="/img/arrow-left-line.png" alt="">
+        <a href="contacts.html"><img class="arrow" src="/img/arrow-left-line.png" alt=""></a>
         <h1>Legal Notice</h1>
         <h2>Imprint</h2>
         <p>
