--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -10,7 +10,7 @@
 <body onload="includeHTML()">
     <div w3-include-html="/templates/navBar.html"></div>
     <div w3-include-html="/templates/header.html"></div>
-    <img class="arrow" src="/img/arrow-left-line.png" alt="">
+    <a href="contacts.html"><img class="arrow" src="/img/arrow-left-line.png" alt=""></a>
     <div class="privacy-policy-container">
         <h1>Privacy Policy</h1>
         <h2>1. Privacy Policy at a Glance</h2>
