--- a/index.html
+++ b/index.html
@@ -26,14 +26,12 @@
                 <img onclick="focusOn('logInEmail')" class="posAbsolute logInInputPicture height13 right15 top11 cursorPointer" src="./img/logInMail.png" alt="E-Mail-picture">
             </div>
             <div class="posRelative">
-                <input placeholder="Password" id="logInPassword" oninput="logInShowEyeOrLock()" onfocusout="logInShowLock()" class="cursorPointer marBot20 fontSize16 logInInputBorder" type="password" required>
+                <input placeholder="Password" id="logInPassword" oninput="showEyeOrLock('logInPassword', 'logInLock', 'logInVisibilityOnOrOff')" class="cursorPointer marBot20 fontSize16 logInInputBorder" type="password" required>
                 <img id="logInLock" onclick="focusOn('logInPassword')" class="posAbsolute logInInputPicture height18 right15 top9 cursorPointer" src="./img/logInLock.png" alt="Password-picture">
-                <img id="logInVisibilityOnOrOff" onclick="logInVisibilityOnOff()" class="posAbsolute right15 height15 top11 d-none cursorPointer" src="./img/logInVisibilityOff.png" alt="visibility-off-picture">
+                <img id="logInVisibilityOnOrOff" onclick="visibilityOnOff('logInVisibilityOnOrOff', 'logInLock', 'logInPassword')" class="posAbsolute right15 height15 top11 d-none cursorPointer" src="./img/logInVisibilityOff.png" alt="visibility-off-picture">
             </div>
             <div class="marBot20 fontSize14 dFlex alignCenter">
                 <img onclick="changeCheckbox('logInCheckbox')" id="logInCheckbox" class="registerCheckbox cursorPointer" src="./img/checkboxNotChecked.png" alt="checkbox">
-                <!-- <img id="logInCheckedCheckbox" class="registerCheckedCheckbox d-none" src="./img/registerCheckedCheckbox.png" alt="checked checkbox"> -->
-                <!-- <input id="logInRememberMe" class="cursorPointer" type="checkbox"> -->
                 <span for="logInRememberMe" class="padLeft8">Remember me</span>
             </div>
             <div class="dFlex">
