--- a/board.html
+++ b/board.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../styles/style.css" />
     <script src="/js/navBar.js"></script>
 </head>
-<body onload="includeHTML()">
+<body onload="includeHTML(), init()">
     <div w3-include-html="/templates/navBar.html"></div>
     <div w3-include-html="/templates/header.html"></div>
     <div class="menuwrapper">
