Render Function Contacts Update

--- a/contacts.html
+++ b/contacts.html
@@ -21,28 +21,14 @@
                     A
                 </div>
                 <div class="line-contacts"></div>
-                <div class="informations">
-                    <div class="user-small">AM</div>
-                    <div>
-                        Anton Mayer <br>
-                    <a href="">antom@gmail.com</a>
-                    </div>
+                <div id="informations">
+                    
                 </div>
                 <div class="informations">
                     <div class="user-small">AS</div>
                     <div>
                         Anja Schulz <br>
                     <a href="">schulz@hotmail.com</a>
-                    </div>
-                </div><div class="letter">
-                    B
-                </div>
-                <div class="line-contacts"></div>
-                <div class="informations">
-                    <div class="user-small">BZ</div>
-                    <div>
-                        Benedikt Ziegler <br>
-                    <a href="">benedikt@gmail.com</a>
                     </div>
                 </div>
             </div>
