HTML + CSS for board and add task finished

--- a/board.html
+++ b/board.html
@@ -31,8 +31,10 @@
     </div>
     <div class="taskWrapper" >
         <div class="toDoColumn">
-            <div>To do</div></div>
-        <div class="column"><div class="card">Progress</div></div>
+            <div class="noTask">No Tasks to do</div>
+            <div class="card d-none">Progress</div></div>
+        <div class="column"><div class="card">
+            <div class="cardInsideFrame">Progress</div></div></div>
         <div class="column"><div class="card">Progress</div></div>
         <div class="column"><div class="card">Progress</div></div>
     </div>
