little bit more clean coding

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="dFlex">
                 <button class="cursorPointer darkBtn fontBold fontSize16">Log in</button>
                 <div class="overDivGuestLogInBtn marLeft30">
-                    <div class="cursorPointer fontDarkBlue fontBold fontSize16 transparentBtn">Guest Log in</div>
+                    <div onclick="guestLogIn()" class="cursorPointer fontDarkBlue fontBold fontSize16 transparentBtn">Guest Log in</div>
                 </div>
             </div>
         </form>
