navBar show two first letters of user

--- a/summary.html
+++ b/summary.html
@@ -6,7 +6,11 @@
     <title>Summary</title>
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="./styles/summary.css" />
-    <script src="js/navBar.js"></script>
+    <script src="./js/storageToken.js" defer></script>
+    <script src="./js/storage.js" defer></script>
+    <script src="./js/register.js" defer></script>
+    <script src="./js/index.js" defer></script>
+    <script src="js/navBar.js" defer></script>
   </head>
   <body onload="init()">
     <!--  -->
