first try of jsDoc in storage.js

--- a/register.html
+++ b/register.html
@@ -52,8 +52,8 @@
         </form>
     </div>
     <section class="posAbsolute bot60LeftCenter opacity0to1">
-        <a class="fontSize14 noDecoration fontLightGrey hoverFontLightBlue hoverFontBold padRight30" href="#">Privacy Policy</a>
-        <a class="fontSize14 noDecoration fontLightGrey hoverFontLightBlue hoverFontBold" href="#">Legal notice</a>
+        <a class="fontSize14 noDecoration fontLightGrey hoverFontLightBlue hoverFontBold padRight30" href="./privacyPolicy.html">Privacy Policy</a>
+        <a class="fontSize14 noDecoration fontLightGrey hoverFontLightBlue hoverFontBold" href="./legalNotice.html">Legal notice</a>
     </section>
 </body>
 </html>
