--- a/board.html
+++ b/board.html
@@ -6,9 +6,15 @@
     <title>Board</title>
     <link rel="stylesheet" href="styles/board.css" />
     <link rel="stylesheet" href="../styles/style.css" />
-    <script src="/js/navBar.js"></script>
+    <script src="./js/storageToken.js" defer></script>
+    <script src="./js/storage.js" defer></script>
+    <script src="./js/register.js" defer></script>
+    <script src="./js/index.js" defer></script>
+    <script src="./js/navBar.js" defer></script>
+    <script src="./js/board.js" defer></script>
+
 </head>
-<body onload="includeHTML(), init()">
+<body onload="initBoard()">
     <div w3-include-html="/templates/navBar.html"></div>
     <div w3-include-html="/templates/header.html"></div>
     <div class="menuwrapper">
