--- a/contacts.html
+++ b/contacts.html
@@ -12,7 +12,7 @@
     <script src="/js/navBar.js"></script>
     <script src="/js/contacts.js"></script>
 </head>
-<body onload="init(), includeHTML()">
+<body onload="init(), includeHTML(), loadContacts2()">
     <div w3-include-html="/templates/navBar.html"></div>
     <div w3-include-html="/templates/header.html"></div>
     <div class="contact-container">
