--- a/contacts.html
+++ b/contacts.html
@@ -32,21 +32,7 @@
         <div class="right-side">
             <div class="right-side-infos">
                 <div class="contact-headline"><h1>Contacts</h1> <div class="line"></div> <h2>Better with a team</h2></div>
-                <div class="contact-info">
-                    <div class="user">AM</div> 
-                    <div class="name-mail">
-                        <h3>Anton Mayer</h3>
-                        <div class="logos">
-                            <div onclick="editContact()" class="edit"><img src="./img/edit-black.png">Edit</div>
-                            <div class="delete"><img src="./img/delete.png">Delete</div>
-                        </div>
-                    </div>
-                </div>
-                <h4>Contact Information</h4>
-                <h5>Email</h5>
-                <a href="">antom@gmail.com</a>
-                <h5>Phone</h5>
-                +49 1111 111 11 1
+                <div id="show-contact-infos"></div>
             </div>
         </div>
     </div> 
