--- a/contacts.html
+++ b/contacts.html
@@ -11,6 +11,7 @@
     <script src="./js/index.js" defer></script>
     <script src="/js/navBar.js"></script>
     <script src="/js/contacts.js"></script>
+    <script src="/js/contacts-html.js"></script>
 </head>
 <body onload="init(), initContacts()">
     <div w3-include-html="/templates/navBar.html"></div>
