--- a/board.html
+++ b/board.html
@@ -20,6 +20,7 @@
 <body onload="initBoard()">
     <div w3-include-html="/templates/navBar.html"></div>
     <div w3-include-html="/templates/header.html"></div>
+    <div id="boardTaskOverlay"></div>
     <div class="menuwrapper">
       <div class="menubar">
        <div class="headline">Board</div>
